# Embedded_DCT

./: CMakeLists.txt  README.md  dct.h  images.h  loeffler_inline.c  loeffler_macro.c  loeffler_neon.c  loeffler_optimized.c  loeffler_register.c  loeffler_routine.c  main.c
